--- a/css/style.css
+++ b/css/style.css
@@ -263,15 +263,24 @@ h1 {
 }
 
 .al_left {
-  justify-content: flex-start;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .al_center {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .al_right {
-  justify-content: flex-end;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
 }
 
 .swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
@@ -1998,6 +2007,159 @@ button[type=submit] {
   margin: 0;
 }
 
+/* ESTILOS INTERNA MEDIOS DE PAGO */
+.c_header2 {
+  text-align: center;
+  width: 100%;
+  max-width: 740px;
+  margin: 40px auto 0;
+}
+.c_header2 .tit_section {
+  text-transform: uppercase;
+  margin: 0 0 16px;
+}
+
+.s_medios_pago_int {
+  background-color: #F4F4F4;
+  margin: 0;
+  padding: 0;
+}
+.s_medios_pago_int .c_medios_pago {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  padding: 60px 0;
+  box-sizing: border-box;
+  gap: 20px;
+}
+
+.cardBox {
+  float: left;
+  font-size: 1.2em;
+  margin: 0;
+  perspective: 800px;
+  transition: all 0.3s ease 0s;
+  width: 100%;
+}
+.cardBox:hover .card_medio {
+  transform: rotateY(180deg);
+}
+.cardBox .card_medio {
+  background: var(--bg_general);
+  border-radius: 12px;
+  cursor: default;
+  transform-style: preserve-3d;
+  transition: transform 0.4s ease 0s;
+  width: 100%;
+  -webkit-animation: giro 1s 1;
+  animation: giro 1s 1;
+  height: 100vh;
+  max-height: 340px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.cardBox .card_medio .card_front,
+.cardBox .card_medio .card_back {
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  box-sizing: border-box;
+  border-radius: 12px;
+  /* display: block; */
+  height: 100%;
+  padding: 30px;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center !important;
+}
+.cardBox .card_medio .card_front h4 {
+  text-transform: uppercase;
+  color: var(--txt_cta_lightblue);
+}
+.cardBox .card_medio .card_front picture {
+  max-height: 60px;
+  display: block;
+  margin: 0 auto;
+}
+.cardBox .card_medio .card_front picture img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.cardBox .card_medio .card_back {
+  background: #F4FAFC;
+  transform: rotateY(180deg);
+}
+.cardBox .card_medio .card_back div {
+  font-size: 15px;
+}
+
+@-webkit-keyframes giro {
+  from {
+    transform: rotateY(180deg);
+  }
+  to {
+    transform: rotateY(0deg);
+  }
+}
+@keyframes giro {
+  from {
+    transform: rotateY(180deg);
+  }
+  to {
+    transform: rotateY(0deg);
+  }
+}
+.s_cont_slider_videos {
+  background-color: #F4F4F4;
+  padding: 0 0 120px;
+  box-sizing: border-box;
+}
+
+.c_sliderVideos {
+  position: relative;
+  padding: 0 80px;
+  box-sizing: border-box;
+}
+.c_sliderVideos .swiper-slide {
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+.c_sliderVideos summary {
+  font-weight: 700;
+}
+.c_sliderVideos .js-modal-btn {
+  cursor: pointer;
+  position: relative;
+}
+.c_sliderVideos .js-modal-btn::before {
+  content: "\f04b";
+  font-family: "Font Awesome 5 Pro";
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border-radius: 100px;
+  background-color: var(--color_pri);
+  inset: 0;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--txt_cta_light);
+  font-weight: 700;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.c_sliderVideos .swiper-button-next, .c_sliderVideos .swiper-button-prev {
+  top: 45%;
+}
+
 /* ************
 RESPONSIVE DESIGN
 ************ */
@@ -2484,6 +2646,10 @@ RESPONSIVE DESIGN
   .btn.social1 {
     width: 30px;
     height: 30px;
+  }
+
+  .c_sliderVideos {
+    padding: 0 20px;
   }
 }
 @media screen and (max-width: 480px) {
