--- a/sass/style.scss
+++ b/sass/style.scss
@@ -250,13 +250,22 @@ h1{
     width: 100%;
 }
 .al_left{
-    justify-content: flex-start;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
 .al_center{
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 .al_right{
-    justify-content: flex-end;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
 }
 .swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction{
     bottom: 0;
@@ -1952,6 +1961,168 @@ button[type=submit]{
     }
 }
 
+/* ESTILOS INTERNA MEDIOS DE PAGO */
+
+.c_header2{
+    text-align: center;
+    width: 100%;
+    max-width: 740px;
+    margin: 40px auto 0;
+    .tit_section{
+        text-transform: uppercase;
+        margin: 0 0 16px;
+    }
+}
+
+.s_medios_pago_int{
+    background-color: #F4F4F4;
+    margin: 0;
+    padding: 0;
+    .c_medios_pago{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        padding: 60px 0;
+        box-sizing: border-box;
+        gap: 20px;
+    }
+}
+
+
+.cardBox {
+    float: left;
+    font-size: 1.2em;
+    margin: 0;
+    perspective: 800px;
+    transition: all 0.3s ease 0s;
+    width: 100%;
+    &:hover .card_medio {
+        transform: rotateY( 180deg);
+    }
+      
+    .card_medio{
+        background: var(--bg_general);
+        border-radius: 12px;
+        cursor: default;
+        transform-style: preserve-3d;
+        transition: transform 0.4s ease 0s;
+        width: 100%;
+        -webkit-animation: giro 1s 1;
+        animation: giro 1s 1;
+        height: 100vh;
+        max-height: 340px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        .card_front,
+        .card_back {
+          backface-visibility: hidden;
+          box-sizing: border-box;
+          border-radius: 12px;
+          /* display: block; */
+          height: 100%;
+          padding: 30px;
+          position: absolute;
+          text-align: center;
+          width: 100%;
+
+          display: flex;
+          flex-direction: column;
+          justify-content: center!important;
+        }
+        .card_front{
+            h4{
+                text-transform: uppercase;
+                color: var(--txt_cta_lightblue);
+            }
+            picture{
+                max-height: 60px;
+                display: block;
+                margin: 0 auto;
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
+                }
+            }
+        }
+        .card_back {
+            background: #F4FAFC;
+            transform: rotateY( 180deg);
+            div{
+                font-size: 15px;
+            }
+        }
+    }
+}
+
+
+@-webkit-keyframes giro {
+    from {
+      transform: rotateY( 180deg);
+    }
+    to {
+      transform: rotateY( 0deg);
+    }
+  }
+  
+@keyframes giro {
+    from {
+        transform: rotateY( 180deg);
+    }
+    to {
+        transform: rotateY( 0deg);
+    }
+}
+
+.s_cont_slider_videos{
+    background-color: #F4F4F4;
+    padding: 0 0 120px;
+    box-sizing: border-box;
+}
+.c_sliderVideos{
+    position: relative;
+    padding: 0 80px;
+    box-sizing: border-box;
+    .swiper-slide{
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+    summary{
+        font-weight: 700;
+    }
+    .js-modal-btn{
+        cursor: pointer;
+        position: relative;
+        &::before{
+            content: "\f04b";
+            font-family: "Font Awesome 5 Pro";
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            border-radius: 100px;
+            background-color: var(--color_pri);
+            inset: 0;
+            margin: auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: var(--txt_cta_light);
+            font-weight: 700;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+    }
+    .swiper-button-next, .swiper-button-prev{
+        top: 45%;
+    }
+}
+
+
+
+
 
 /* ************
 RESPONSIVE DESIGN
@@ -2355,6 +2526,9 @@ RESPONSIVE DESIGN
         width: 30px;
         height: 30px;
     }
+    .c_sliderVideos{
+        padding: 0 20px;
+    }
 }
 @media screen and (max-width:480px){
     header .header_nav{
@@ -2466,6 +2640,7 @@ RESPONSIVE DESIGN
             font-size: 13px;
         }
     }
+
 }
 @media screen and (max-width:390px){
     .c_perfil_pro picture {
